--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
@@ -1,4 +1,6 @@
 ﻿<mat-form-field>
+    <span *ngIf="parameter.figures && parameter.figures.length > 0"
+          matPrefix><figures-button [parameter]="parameter"></figures-button></span>
     <input type="text"
            aria-label="Number"
            matInput
