--- a/Build_IT_Web/ClientApp/app/components/login/login.component.html
+++ b/Build_IT_Web/ClientApp/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="login-container">
-    <h2 class="login-title">{{title}}</h2>
+    <h2 class="login-title">{{'login.Title' | translate}}</h2>
     <form [formGroup]="form"
           (ngSubmit)="onSubmit()"
           class="login-form">
@@ -8,50 +8,60 @@
             {{form.errors.auth}}
         </div>
         <div class="form-group"
-             [ngClass]="{ 'has-error has-feedback' : hasError('Username') }">
-            <input type="text" required
-                   formControlName="Username"
-                   class="form-control"
-                   placeholder="Nazwa użytkownika lub adres e-mail" />
-            <span *ngIf="hasError('Username')"
-                  class="glyphicon glyphicon-remove form-control-feedback"
-                  aria-hidden="true"></span>
-            <div *ngIf="hasError('Username')"
-                 class="help-block">
-                Wpisz poprawną nazwę użytkownika lub adress e-mail.
-            </div>
+             [ngClass]="{ 'has-error has-feedback' : hasError('username') }">
+
+            <mat-form-field class="form-medium">
+                <input matInput
+                       type="text"
+                       placeholder="{{'login.UsernameOrEmail' | translate}}"
+                       [formControl]="username">
+                <mat-error *ngIf="username && username.hasError('email') && !username.hasError('required')">
+                    {{'login.WriteProperUsernameOrPassword' | translate}}
+                </mat-error>
+                <mat-error *ngIf="username && username.hasError('required')">
+                    {{'login.WriteProperUsernameOrPassword' | translate}}
+                </mat-error>
+            </mat-form-field>
         </div>
         <div class="form-group"
-             [ngClass]="{ 'has-error has-feedback' : hasError('Password') }">
-            <input type="password" required
-                   formControlName="Password"
-                   class="form-control"
-                   placeholder="Hasło" />
-            <span *ngIf="hasError('Password')"
-                  class="glyphicon glyphicon-remove form-control-feedback"
-                  aria-hidden="true"></span>
-            <div *ngIf="hasError('Password')"
-                 class="help-block">
-                Wpisz hasło.
-            </div>
+             [ngClass]="{ 'has-error has-feedback' : hasError('password') }">
+
+            <mat-form-field class="form-medium">
+                <input matInput
+                       type="password"
+                       placeholder="{{'login.Password' | translate}}"
+                       [formControl]="password">
+                <mat-error *ngIf="password && password.hasError('email') && !password.hasError('required')">
+                    {{'login.WritePassword' | translate}}
+                </mat-error>
+                <mat-error *ngIf="password && password.hasError('required')">
+                    {{'login.WritePassword' | translate}}
+                </mat-error>
+            </mat-form-field>
         </div>
-        <div class="checkbox">
-            <label><input type="checkbox" name="remember" value="remember" />Zapamiętaj mnie</label>
+        <div>
+            <mat-checkbox class="example-margin"
+                          name="remember"
+                          value="remember">
+                {{'login.RememberMe' | translate}}
+            </mat-checkbox>
         </div>
-        <button type="submit"
-                [disabled]="form.invalid"
-                class="btn btn-md btn-success btn-block btn-signin">
-            Zaloguj się
+        <button mat-raised-button
+                color="accent"
+                type="submit"
+                [disabled]="form.invalid">
+            {{'login.LogIn' | translate}}
         </button>
     </form>
     <div class="login-link">
         <a href="#">
-            Zapomniałeś hasła?
+            {{'login.ForgotPassword' | translate}}
         </a>
     </div>
     <div class="login-link">
-        <a [routerLink]="['/register']">
-            Nie masz konta? Kliknij tu, aby je utworzyć!
+        <a [routerLink]="['/register']"
+           (click)="dismiss()">
+            {{'login.DontHaveAccount' | translate}}
         </a>
     </div>
 </div>
