--- a/Build_IT_Web/ClientApp/app/components/login/login.component.scss
+++ b/Build_IT_Web/ClientApp/app/components/login/login.component.scss
@@ -1,1 +1,11 @@
-﻿
+﻿.login-container {
+    margin: auto;
+    width: 90%;
+    padding: 10px;
+}
+
+.form-medium {
+    min-width: 150px;
+    max-width: 340px;
+    width: 100%;
+}
