--- a/Build_IT_Web/ClientApp/app/components/register/register.component.html
+++ b/Build_IT_Web/ClientApp/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="login-container">
-    <h2 class="login-title">{{title}}</h2>
+    <h2 class="login-title">{{'register.RegisterNewUser' | translate}}</h2>
     <form [formGroup]="form"
           (ngSubmit)="onSubmit()"
           class="login-form">
@@ -12,13 +12,13 @@
             <input type="text" required autofocus
                    formControlName="Username"
                    class="form-control"
-                   placeholder="Wpisz nazwę użytkownika..." />
+                   placeholder="{{'register.WriteUsername' | translate}}" />
             <span *ngIf="hasError('Username')"
                   class="glyphicon glyphicon-remove form-control-feedback"
                   aria-hidden="true"></span>
             <div *ngIf="hasError('Username')"
                  class="help-block">
-                Proszę wpisać poprawną nazwę użytkownika.
+                {{'register.WriteProperUsername' | translate}}
             </div>
         </div>
         <div class="form-group"
@@ -26,13 +26,13 @@
             <input type="text" required autofocus
                    formControlName="Email"
                    class="form-control"
-                   placeholder="Wpisz e-mail..." />
+                   placeholder="{{'register.WriteEmail' | translate}}" />
             <span *ngIf="hasError('Email')"
                   class="glyphicon glyphicon-remove form-control-feedback"
                   aria-hidden="true"></span>
             <div *ngIf="hasError('Email')"
                  class="help-block">
-                Proszę wpisać poprawny adres e-mail.
+                {{'register.WriteProperEmail' | translate}}
             </div>
         </div>
         <div class="form-group"
@@ -40,13 +40,13 @@
             <input type="password" required
                    formControlName="Password"
                    class="form-control"
-                   placeholder="Wpisz hasło..." />
+                   placeholder="{{'register.WritePassword' | translate}}" />
             <span *ngIf="hasError('Password')"
                   class="glyphicon glyphicon-remove form-control-feedback"
                   aria-hidden="true"></span>
             <div *ngIf="hasError('Password')"
                  class="help-block">
-                Proszę wpisać poprawne hasło.
+                {{'register.WriteProperPassword' | translate}}
             </div>
         </div>
         <div class="form-group"
@@ -54,13 +54,13 @@
             <input type="password" required
                    formControlName="PasswordConfirm"
                    class="form-control"
-                   placeholder="Powtórz hasło..." />
+                   placeholder="{{'register.RepeatPassword' | translate}}" />
             <span *ngIf="hasError('PasswordConfirm')"
                   class="glyphicon glyphicon-remove form-control-feedback"
                   aria-hidden="true"></span>
             <div *ngIf="hasError('PasswordConfirm')"
                  class="help-block">
-                Hasło i jego potwierdzenie nie są zgodne.
+                {{'register.WrongPasswordConfirmation' | translate}}
             </div>
         </div>
         <div class="form-group"
@@ -68,25 +68,25 @@
             <input type="text" required autofocus
                    formControlName="DisplayName"
                    class="form-control"
-                   placeholder="Określ wyświetlaną nazwę użytkownika..." />
+                   placeholder="{{'register.WriteDisplayedName' | translate}}" />
             <span *ngIf="hasError('DisplayName')"
                   class="glyphicon glyphicon-remove form-control-feedback"
                   aria-hidden="true"></span>
             <div *ngIf="hasError('DisplayName')"
                  class="help-block">
-                Wpisz poprawną nazwę użytkownika do wyświetlania.
+                {{'register.WriteProperDisplayedName' | translate}}
             </div>
         </div>
         <div class="text-center">
             <button type="submit"
                     [disabled]="form.invalid"
                     class="btn btn-md btn-success btn-signin">
-                Zarejestruj się
+                {{'register.Register' | translate}}
             </button>
             <button type="submit"
                     (click)="onBack()"
                     class="btn btn-md btn-default">
-                Anuluj
+                {{'register.Cancel' | translate}}
             </button>
         </div>
     </form>
