--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.html
@@ -1,4 +1,6 @@
 ﻿<mat-form-field>
+    <span *ngIf="parameter.figures && parameter.figures.length > 0"
+          matPrefix><figures-button [parameter]="parameter"></figures-button></span>
     <input matInput
            [required]="isRequired()"
            autocomplete="off"
