--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/parameters-form/parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/parameters-form/parameter-form.component.html
@@ -34,4 +34,4 @@
 
 </ng-template>
 
-<parameter-figures [parameter]="parameter"></parameter-figures>
+<!--<parameter-figures [parameter]="parameter"></parameter-figures>-->
