--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
@@ -1,6 +1,8 @@
 ﻿
 <div class="justify-content-start parameter-radio">
     <label class="align-self-start mb-2">
+        <span *ngIf="parameter.figures && parameter.figures.length > 0"
+              matPrefix><figures-button [parameter]="parameter"></figures-button></span>
         <span [innerHtml]="parameter.name | html"></span>{{isRequired() ? '*' : ''}}
     </label>
     <mat-radio-group [(ngModel)]="parameter.value"
