--- a/Build_IT_Web/ClientApp/app/components/register/register.component.html
+++ b/Build_IT_Web/ClientApp/app/components/register/register.component.html
@@ -1,4 +1,6 @@
-﻿<div class="login-container">
+﻿<h1>Work in progress</h1>
+
+<!--<div class="login-container">
     <h2 class="login-title">{{'register.RegisterNewUser' | translate}}</h2>
     <form [formGroup]="form"
           (ngSubmit)="onSubmit()"
@@ -90,4 +92,4 @@
             </button>
         </div>
     </form>
-</div>
+</div>-->
