Desktop app repaired.

--- a/Build_IT_Desktop/App.xaml
+++ b/Build_IT_Desktop/App.xaml
@@ -6,13 +6,14 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/Template.xaml"/>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/ColorsResourceDictionary.xaml"/>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/ImagesResourceDictionary.xaml"/>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/Controls/TextStylesResourceDictionary.xaml"/>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/Controls/ButtonsStylesResourceDictionary.xaml"/>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/Controls/ScrollBarsStylesResourceDictionary.xaml"/>
-                <ResourceDictionary Source="/Build_IT_Desktop;component/Resources/ResourceDictionaries/Controls/ComboBoxResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/Template.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/ColorsResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/ConvertersResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/ImagesResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/Controls/TextStylesResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/Controls/ButtonsStylesResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/Controls/ScrollBarsStylesResourceDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Build_IT_Infrastructure;component/Resources/ResourceDictionaries/Controls/ComboBoxResourceDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
