--- a/Build_IT_Desktop/Views/HeaderView.xaml
+++ b/Build_IT_Desktop/Views/HeaderView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:constants="clr-namespace:Build_IT_Desktop.Views.Constants"
+             xmlns:constants="clr-namespace:Build_IT_Infrastructure.Constants;assembly=Build_IT_Infrastructure"
              xmlns:local="clr-namespace:Build_IT_Desktop.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
