--- a/Build_IT_Desktop/Views/MainWindow.xaml
+++ b/Build_IT_Desktop/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        xmlns:constants="clr-namespace:Build_IT_Desktop.Views.Constants"
+        xmlns:constants="clr-namespace:Build_IT_Infrastructure.Constants;assembly=Build_IT_Infrastructure"
         xmlns:local="clr-namespace:Build_IT_Desktop.Views"
         mc:Ignorable="d"
         Title="Building-IT" 
@@ -15,6 +15,10 @@
         AllowsTransparency="True" 
         WindowState="Normal" 
         ResizeMode="CanResize" >
+    <Window.Style>
+        <Style TargetType="{x:Type local:MainWindow}"
+               BasedOn="{StaticResource {x:Type Window}}"/>
+    </Window.Style>
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="0" ResizeBorderThickness="5"/>
     </WindowChrome.WindowChrome>
