--- a/Build_IT_Desktop/Views/Scripts/ScriptsListView.xaml
+++ b/Build_IT_Desktop/Views/Scripts/ScriptsListView.xaml
@@ -6,7 +6,7 @@
              xmlns:scripts="clr-namespace:Build_IT_Desktop.Views.Scripts"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             xmlns:constants="clr-namespace:Build_IT_Desktop.Views.Constants"
+             xmlns:constants="clr-namespace:Build_IT_Infrastructure.Constants;assembly=Build_IT_Infrastructure"
              xmlns:local="clr-namespace:Build_IT_Desktop.Views.Scripts"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
