Data parameter value editor + cookies

--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <form (ngSubmit)="onSubmit($event)"
       [formGroup]="parameterForm">
@@ -117,8 +117,10 @@
         </mat-error>
     </mat-form-field>
 
-    <!--<div contenteditable="true"
-         [innerHtml]="parameterValue.value | html"></div>-->
+    <div contenteditable="true"
+         [attr.style]="styles"
+         [innerHtml]="styledValue | html | safeHtml"
+         id="valueEditor"></div>
 
     <mat-form-field class="m-2 full-width">
         <textarea matInput
