--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.scss
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.scss
@@ -1,4 +1,4 @@
-﻿table{
+table{
     width: 100%;
 }
 
@@ -37,3 +37,4 @@ mat-chip-list mat-chip {
     padding: 5px 10px;
     margin: 10px 3px 0px;
 }
+
