--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
@@ -117,6 +117,11 @@
         </mat-error>
     </mat-form-field>
 
+  <app-value-form [parameterForm]="parameterForm"
+                  [scriptId]="scriptId"
+                  fieldName="value"
+                  [parameters]="parameters"></app-value-form>
+
     <div contenteditable="true"
          [attr.style]="styles"
          [innerHtml]="styledValue | html | safeHtml"
