Groups for parameters and their translations

--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
@@ -45,7 +45,7 @@
         <mat-expansion-panel *ngFor="let group of groups">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              {{group.name}}
+              {{group.group.name}}
             </mat-panel-title>
           </mat-expansion-panel-header>
 
