--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/parameters-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/parameters-form.component.html
@@ -1,4 +1,7 @@
-﻿<div *ngIf="!editMode">
+<div *ngIf="!editMode">
+  <app-groups-form [scriptId]="scriptId"
+                   [parameters]="parameters"></app-groups-form>
+
     <div class="m-4">
         <label id="parameters-type-filter">{{'scriptsForm.Parameters.ParametersFilterLabel' | translate}}:</label>
         <mat-radio-group aria-labelledby="parameters-type-filter"
