--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/translation-form/translation-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/translation-form/translation-form.component.html
@@ -1,32 +1,39 @@
-﻿<div [formGroup]="translationForm">
+<div [formGroup]="translationForm">
 
-    <app-script-translation-form [scriptForm]="scriptForm"
-                                 [defaultLanguage]="defaultLanguage"
-                                 [translationForm]="translationForm"
-                                 [translationData]="translationData"></app-script-translation-form>
-    <app-parameter-translation-form [scriptForm]="scriptForm"
-                                    [defaultLanguage]="defaultLanguage"
-                                    [translationForm]="translationForm"
-                                    [translationData]="translationData"
-                                    #parameterTranslationForm></app-parameter-translation-form>
+  <app-script-translation-form [scriptForm]="scriptForm"
+                               [defaultLanguage]="defaultLanguage"
+                               [translationForm]="translationForm"
+                               [translationData]="translationData"></app-script-translation-form>
+   
+  <app-group-translation-form [scriptForm]="scriptForm"
+                              [defaultLanguage]="defaultLanguage"
+                              [translationForm]="translationForm"
+                              [translationData]="translationData"
+                              #groupTranslationForm></app-group-translation-form>
+  
+  <app-parameter-translation-form [scriptForm]="scriptForm"
+                                  [defaultLanguage]="defaultLanguage"
+                                  [translationForm]="translationForm"
+                                  [translationData]="translationData"
+                                  #parameterTranslationForm></app-parameter-translation-form>
 
-    <div class="flex-column">
-        <button mat-stroked-button
-                color="accent"
-                type="button"
-                (click)="onScriptTranslationSubmit()"
-                [disabled]="!translationForm.valid"
-                class="mt-3 ml-3">
-            {{translationData.editMode ? ('scriptsForm.Translations.Update' | translate) : ('scriptsForm.Translations.Add' | translate)}}
-        </button>
+  <div class="flex-column">
+    <button mat-stroked-button
+            color="accent"
+            type="button"
+            (click)="onScriptTranslationSubmit()"
+            [disabled]="!translationForm.valid"
+            class="mt-3 ml-3">
+      {{translationData.editMode ? ('scriptsForm.Translations.Update' | translate) : ('scriptsForm.Translations.Add' | translate)}}
+    </button>
 
-        <button mat-stroked-button
-                color="warn"
-                type="button"
-                *ngIf="translationData.editMode"
-                (click)="removeScriptTranslation()"
-                class="mt-3 ml-3">
-            {{'scriptsForm.Translations.Remove' | translate}}
-        </button>
-    </div>
+    <button mat-stroked-button
+            color="warn"
+            type="button"
+            *ngIf="translationData.editMode"
+            (click)="removeScriptTranslation()"
+            class="mt-3 ml-3">
+      {{'scriptsForm.Translations.Remove' | translate}}
+    </button>
+  </div>
 </div>
