--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.html
@@ -1,4 +1,4 @@
-﻿<div [ngClass]="{'parameter-result-important': isImportant()}">
+<div [ngClass]="{'parameter-result-important': isImportant()}">
     <mat-list-item class="mt-3">
         <div class="d-inline-flex m-2">
             <h3 class="blockquote d-inline-block mr-2 parameter-result-header"
