--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/value-form/value-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/value-form/value-form.component.html
@@ -1,6 +1,6 @@
 
+       <!--[attr.style]="styles"-->
   <div contenteditable="true"
-       [attr.style]="styles"
        [innerHtml]="styledValue | safeHtml"
        (keyup)="changed()"
        #element></div>
