--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
@@ -126,10 +126,10 @@
                   fieldName="value"
                   [parameters]="parameters"></app-value-form>
 
-    <div contenteditable="true"
+    <!--<div contenteditable="true"
          [attr.style]="styles"
          [innerHtml]="styledValue | html | safeHtml"
-         id="valueEditor"></div>
+         id="valueEditor"></div>-->
 
     <mat-form-field class="m-2 full-width">
         <textarea matInput
