--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/existing-figures-dialog/existing-figures-dialog.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/existing-figures-dialog/existing-figures-dialog.component.html
@@ -1,4 +1,4 @@
-﻿<h1 mat-dialog-title>Pictures</h1>
+<h1 mat-dialog-title>Pictures</h1>
 <div mat-dialog-content>
     <p>Select proper picture:</p>
     <mat-form-field>
@@ -13,6 +13,6 @@
             (click)="onNoClick()">No Thanks</button>
     <button mat-button 
             type="button"
-            [mat-dialog-close]="data" 
             cdkFocusInitial>Ok</button>
+            <!--[mat-dialog-close]="data"--> 
 </div>
