--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
@@ -1,4 +1,4 @@
-﻿<mat-form-field>
+<mat-form-field>
     <span *ngIf="parameter.figures && parameter.figures.length > 0"
           matPrefix><figures-button [parameter]="parameter"></figures-button></span>
     <input type="text"
@@ -6,7 +6,7 @@
            matInput
            [required]="isRequired()"
            [formControl]="valueOptionsForm"
-           [attr.type]="parameter.valueType == 0 ? 'number' : 'text'"
+           [attr.type]="parameter.valueType == valueTypes.number ? 'number' : 'text'"
            name="parameterInput"
            [ngClass]="parameter.name"
            [matAutocomplete]="auto"
