--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/test-data-form/test-data-form.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-form/test-data-form/test-data-form.component.html
@@ -1,1 +1,97 @@
-<h4>Test data</h4>
+
+<button mat-raised-button
+        (click)="addTestData()">Add test data</button>
+
+<div class="flex-column d-none d-flex col col-xl-3 col-lg-4 col-md-6 col-sm-12 col-auto mb-4"
+     *ngFor="let testDataContainer of testDatasContainers">
+  <mat-card class="test-data-card m-4">
+    <mat-card-header>
+      <mat-card-title>
+        {{testDataContainer.testData.name}}
+        <span class="fa fa-times text-danger"
+              *ngIf="!testDataContainer.result"></span>
+        <span class="fa fa-check text-success"
+              *ngIf="testDataContainer.result"></span>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div *ngFor="let parameterPair of testDataContainer.parametersPairs">
+        <mat-form-field>
+          <input matInput
+                 [required]="isRequired(parameterPair.parameter)"
+                 autocomplete="off"
+                 [ngClass]="parameterPair.parameter.name"
+                 [attr.type]="parameterPair.parameter.valueType == valueTypes.number ? 'number' : 'text'"
+                 [(ngModel)]="parameterPair.testParameter.value" />
+          <mat-placeholder>
+            <span [innerHtml]="parameterPair.parameter.name | html"></span>
+          </mat-placeholder>
+          <span matSuffix [innerHtml]="parameterPair.parameter.unit | html"></span>
+        </mat-form-field>
+        <p class="parameter-description">{{parameterPair.parameter.description}}</p>
+      </div>
+
+      <button mat-stroked-button
+              (click)="addAssertion(testDataContainer)">Add assertion</button>
+
+        <div *ngFor="let assertion of testDataContainer.assertions; let i = index">
+          <mat-form-field>
+            <span matPrefix>
+              <span class="badge badge-info">{{i+1}}</span>
+              <span> &nbsp;</span>
+            </span>
+            <input matInput
+                   autocomplete="off"
+                   [(ngModel)]="assertion.value" />
+            <span matSuffix>
+              <button mat-button
+                      (click)="removeAssertion(assertion, testDataContainer)">
+                -
+              </button>
+            </span>
+          </mat-form-field>
+        </div>
+
+        <mat-accordion *ngIf="testDataContainer.calculationResults.length > 0"
+                       class="mb-5">
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Results
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-list dense>
+              <mat-list-item *ngFor="let resultParameter of testDataContainer.calculationResults">
+                <h3 mat-list-icon [innerHtml]="resultParameter.name | html"></h3>
+                <p matLine> {{resultParameter.value}} <span [innerHtml]="resultParameter.unit | html"></span></p>
+              </mat-list-item>
+            </mat-list>
+          </mat-expansion-panel>
+        </mat-accordion>
+
+    </mat-card-content>
+    <mat-card-actions>
+      <div class="actions">
+        <button mat-stroked-button
+                (click)="fullTest(testDataContainer)">
+          Test
+        </button>
+
+        <button mat-stroked-button
+                (click)="save(testDataContainer)">
+          Save
+        </button>
+      </div>
+
+      <button mat-stroked-button
+              color="warn"
+              class="float-right"
+              (click)="removeTestData(testDataContainer)">
+        <span class="fa fa-trash"></span>
+      </button>
+
+    </mat-card-actions>
+
+
+  </mat-card>
+</div>
