--- a/Build_IT_Web/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/Build_IT_Web/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <a class="navbar-brand font-weight-bold"
        [routerLink]='["/"]'><span class="fa fa-building-o"></span>BUILD IT</a>
     <button class="navbar-toggler"
