--- a/Build_IT_Web/ClientApp/src/app/components/register/register.component.html
+++ b/Build_IT_Web/ClientApp/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
-﻿<h1>Work in progress</h1>
+<!--<h1>Work in progress</h1>-->
 
-<!--<div class="login-container">
+<div class="login-container">
     <h2 class="login-title">{{'register.RegisterNewUser' | translate}}</h2>
     <form [formGroup]="form"
           (ngSubmit)="onSubmit()"
@@ -92,4 +92,4 @@
             </button>
         </div>
     </form>
-</div>-->
+</div>
